(fix) fix spacing and justify text

--- a/packages/apps/esm-llm-tools-app/src/llmtools/llmtools-chat.styles.scss
+++ b/packages/apps/esm-llm-tools-app/src/llmtools/llmtools-chat.styles.scss
@@ -76,7 +76,7 @@ p {
 }
 
 .llmtsnippet {
-  margin-top: 16%;
+  margin-top: 9%;
 }
 
 .llmtslargecell {
